playground/notas_tests/valid/inf-07.hulk
type T(x) { x = x; getX() => self.x; }
print(new T(5).getX());
