playground/notas_tests/invalid/syn-type-attr-after-method.hulk
type T { m() => 1; x:Number = 0; }
